[package]
name = "clipstash"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
derive_more = "0.99.17"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["sqlite", "uuid", "chrono", "runtime-tokio-rustls", "macros"] }
thiserror = "1.0.38"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
